<resources>
    <string name="app_name">Female In Action</string>

    <string name="fmt_num_ratings" translatable="false">(%d)</string>

    <string name="sign_out">Sign Out</string>
    <string name="profile">Profile</string>

    <string name="title_sign_in_error">Sign In Error</string>
    <string name="message_no_network">No network connection.</string>
    <string name="message_unknown">Unknown error.</string>
    <string name="option_retry">Retry</string>
    <string name="option_exit">Exit</string>

    <string name="start_chatting">No messages. Start chatting at the bottom!</string>
    <string name="hint_message">Say something…</string>
    <string name="send">Send</string>

    <string name="rational_image_perm">This apps will read an image from local storage to upload to Cloud Storage.</string>
    <string name="empty">Empty</string>
    <string name="about">About</string>
    <string name="available">Available</string>
    <string name="review">Review</string>
    <string name="date">(00:00–12:12) 01/01/2020</string>
    <string name="welcome">Welcome</string>
    <string name="finish">Finish</string>
    <string name="status_pernikahan">Status Pernikahan</string>
    <string name="jenis_kasus">Jenis Kasus</string>
    <string name="kronologi">Kronologi</string>
    <string name="submit">Submit</string>
    <string name="add_review">Add Review</string>
    <string name="add_your_review_here">Add your review here</string>
    <string name="cancel">CANCEL</string>
    <string name="divide">|</string>
    <string name="topic">Topic</string>
    <string name="description">Description</string>
    <string name="detail">Detail</string>
    <string name="add_available">Add Available</string>
    <string name="choose_date">Choose Date</string>
    <string name="update">Update</string>
    <string name="no_hp">No HP</string>
    <string name="play_video">Play Video</string>
    <string name="title">Title</string>
    <string name="source">Source</string>
    <string name="link">Link</string>
    <string name="category">Category</string>
    <string name="save_contact">Save Contact</string>
    <string name="no_review_yet">No Review Yet</string>
</resources>