<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:text="@string/add_review" />

    <me.zhanghai.android.materialratingbar.MaterialRatingBar
        android:id="@+id/userFormRating"
        style="@style/Widget.MaterialRatingBar.RatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:maxHeight="32dp"
        android:minHeight="32dp" />

    <EditText
        android:id="@+id/userFormText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_rect"
        android:padding="12dp"
        android:inputType="textMultiLine"
        android:textSize="16sp"
        android:maxLines="5"
        android:scrollbars="vertical"
        android:layout_gravity="center_horizontal"
        android:hint="@string/add_your_review_here" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="2dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/userFormCancel"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/cancel"
            android:textColor="#3d3d3d" />


        <Button
            android:id="@+id/userFormButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/submit" />

    </LinearLayout>

</LinearLayout>
